<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/uninstall_confirm_root" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@android:color/white">
        <include android:id="@+id/uninstall_confirm_toolbar" layout="@layout/view_uninstall_toolbar" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
        <androidx.core.widget.NestedScrollView android:id="@+id/uninstall_confirm_scroll" android:layout_width="0dp" android:layout_height="0dp" android:fillViewport="true" app:layout_constraintTop_toBottomOf="@id/uninstall_confirm_toolbar" app:layout_constraintBottom_toTopOf="@id/fr_ads" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingBottom="30dp">
                <androidx.appcompat.widget.AppCompatImageView android:id="@+id/confirm_uninstall_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:contentDescription="@null" android:src="@drawable/ic_confirm_uninstall" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
                <TextView android:id="@+id/confirm_uninstall_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:gravity="center" android:text="@string/uninstall_keep_title" android:textColor="@color/black" android:textSize="16sp" android:textStyle="bold" app:layout_constraintWidth_percent="0.76" app:layout_constraintTop_toBottomOf="@id/confirm_uninstall_image" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
                <TextView android:id="@+id/confirm_uninstall_description" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:gravity="center" android:paddingHorizontal="24dp" android:text="@string/uninstall_keep_description" android:textColor="#4F5765" android:textSize="14sp" app:layout_constraintTop_toBottomOf="@id/confirm_uninstall_title" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
                <androidx.appcompat.widget.AppCompatButton android:id="@+id/keep_app_button" android:layout_width="0dp" android:layout_height="48dp" android:layout_marginHorizontal="16dp" android:layout_marginTop="30dp" android:background="@drawable/bg_keep_phone_tracker" android:text="@string/keep_phone_tracker" android:textAllCaps="false" android:textColor="@color/white" app:layout_constraintTop_toBottomOf="@id/confirm_uninstall_description" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
                <androidx.appcompat.widget.AppCompatButton android:id="@+id/continue_uninstall_button" android:layout_width="0dp" android:layout_height="48dp" android:layout_marginHorizontal="16dp" android:layout_marginTop="12dp" android:background="@drawable/bg_continue_uninstall" android:text="@string/continue_to_uninstall" android:textAllCaps="false" android:textColor="#08A331" app:layout_constraintTop_toBottomOf="@id/keep_app_button" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
        <FrameLayout android:id="@+id/fr_ads" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:background="@color/white" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
            <include android:id="@+id/shimmer_ads" layout="@layout/layout_shimmer_native_language" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>




